sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: reassignment to val
			i = i+1	
                          ^AlgGnomeSort:9: error: reassignment to val
			i = i+1
                          ^AlgGnomeSort:12: error: reassignment to val
			i = i-1
                          ^